# voltdb-client-python

./: .gitignore  CONTRIBUTING.md  LICENSE  Query.py  README  README.md  make_kit.sh  pyproject.toml  setup.py  voltdbclient.py
examples/: README  README.md  helloworld.py  run_voter.sh  voter.py
examples/hello_datatypes/: ddl.sql  hello_datatypes.py
tests/big_results/: README  ddl.sql  run.sh  test.py
tests/big_results/src/voter/procedures/: BigResults.java
voltdbclient/: __init__.py  voltdbclient.py
