[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltdbclient"
version = "1.0.0"
authors = [
  { name="Volt Active Data", email="support@voltactivedata.com" },
]
description = "VoltDB python client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
